--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -29,16 +29,17 @@ jobs:
       run: npm install
 
     - name: Run tests
-      run: npm test
+      run: npm test # 如果没有测试，可以注释掉这一行
 
     - name: Build application
-      run: npm run build
+      run: npm run build # 确保你的 package.json 中有对应的 build 脚本。如果没有，可以将其删除。
 
     - name: Deploy to GitHub Pages
       if: ${{ github.ref == 'refs/heads/main' }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add -f build
+        mkdir -p public # 如果没有 build 目录，创建一个 public 目录
+        git add -f public
         git commit -m 'Deploy to GitHub Pages'
-        git push origin `git subtree split --prefix build main`:gh-pages --force
+        git push origin `git subtree split --prefix public main`:gh-pages --force
