--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,6 +17,11 @@ jobs:
         node-version: [16.x]
 
     steps:
+    - name: Show working directory and file list
+      run: |
+        pwd
+        ls -al
+
     - name: Checkout code
       uses: actions/checkout@v2
 
@@ -41,6 +46,6 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         mkdir -p public # 如果没有 build 目录，创建一个 public 目录
         git add -f public
-        git status # 查看当前的 git 状态，确保添加成功
+        git status
         git commit -m 'Deploy to GitHub Pages'
         git push origin `git subtree split --prefix public main`:gh-pages --force
