--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -47,5 +47,6 @@ jobs:
         mkdir -p public # 如果没有 build 目录，创建一个 public 目录
         git add -f public
         git status
+        git add package-lock.json
         git commit -m 'Deploy to GitHub Pages'
         git push origin `git subtree split --prefix public main`:gh-pages --force
