--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -40,7 +40,9 @@ jobs:
       run: npm run build # 确保你的 package.json 中有对应的 build 脚本。如果没有，可以将其删除。
 
     - name: Deploy to GitHub Pages
-      if: ${{ github.ref == 'refs/heads/main' }}
+       if: ${{ github.ref == 'refs/heads/main' }}
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
