--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,54 +1,11 @@
-name: Node.js CI/CD
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
-    steps:
-    - name: Show working directory and file list
-      run: |
-        pwd
-        ls -al
-
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run tests
-      run: npm test # 如果没有测试，可以注释掉这一行
-
-    - name: Build application
-      run: npm run build # 确保你的 package.json 中有对应的 build 脚本。如果没有，可以将其删除。
-
-    - name: Deploy to GitHub Pages
-       if: ${{ github.ref == 'refs/heads/main' }}
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        mkdir -p public # 如果没有 build 目录，创建一个 public 目录
-        git add -f public
-        git status
-        git add package-lock.json
-        git commit -m 'Deploy to GitHub Pages'
-        git push origin `git subtree split --prefix public main`:gh-pages --force
+on: push
+    jobs:
+        build-node:
+            runs-on: ubuntu-latest
+            container: node:14
+            steps:
+                - run: node --versiion
+                - run: npm --version
+                - uses: actions/checkout@v3
+                - run: npm install
+                - run: node index.js
