--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -3,8 +3,7 @@ name: 部署 PM2 專案
 on:
   push: 
     branches:
-      - feature/action-pm2
-
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
