--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,25 +1,28 @@
-name: 部署 PM2 專案
+name: Deploy Express App
 
 on:
-  push: 
+  push:
     branches:
       - main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v1
-      
-      - name: Install Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 18
+        uses: actions/checkout@v2
 
-      - name: npm install, build and test
-        run: |
-          npm install
-      - name: Run Node.js application
-        run: |
-          node index.js
-          
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build application (if needed)
+        run: npm run build # 如果需要构建，请替换成实际的构建命令
+
+      - name: Start Express server
+        run: npm start
