--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "sockit-io-app",
   "main":"index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "socket.io": "^4.7.5"
